# cmake-practices

exe/: CMakeLists.txt  README.md  main.cpp
shared-library/: CMakeLists.txt  README.md
shared-library/echo/: echo.h  exports.h
shared-library/src/: echo.cpp
